@@ -36,6 +36,7 @@ CONFIG += -DUSE_PIP			# PIP support
 #CONFIG += -DUSE_TS_VIDEO		# build new ts video parser
 #CONFIG += -DUSE_MPEG_COMPLETE		# support only complete mpeg packets
 #CONFIG += -DH264_EOS_TRICKSPEED	# insert seq end packets for trickspeed
+#CONDIF += -DDUMP_TRICKSPEED		# dump trickspeed packets
 CONFIG += -DUSE_VDR_SPU			# use VDR SPU decoder.
 #CONFIG += -DUSE_SOFTLIMIT		# (tobe removed) limit the buffer fill
 
